# basic_quadrotor_behaviors

package/: CMakeLists.txt  package.xml
package/launch/: basic_quadrotor_behaviors.launch
package/src/include/: behavior_estimate_position_with_linear_speed.h  behavior_estimate_position_with_sensor.h  behavior_hover_with_flight_action_control.h  behavior_land.h  behavior_self_localize_with_ground_truth.h  behavior_take_off.h  behavior_wait.h
package/src/source/: behavior_estimate_position_with_linear_speed.cpp  behavior_estimate_position_with_sensor.cpp  behavior_hover_with_flight_action_control.cpp  behavior_land.cpp  behavior_self_localize_with_ground_truth.cpp  behavior_take_off.cpp  behavior_wait.cpp
